update redis lock